fix: typer letter spacing & form api

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -193,3 +193,7 @@ footer.footer {
   word-break: keep-all;
   text-overflow: ellipsis;
 }
+
+.ti-cursor {
+  letter-spacing: 0 !important;
+}
