--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,5 +1,6 @@
 :root {
   --ti-cursor-color: var(--ifm-font-color-base);
+  --ti-cursor-font-size: 1em;
 }
 
 .heroBanner {
@@ -55,7 +56,7 @@
   position: relative;
 
   & img {
-    width: 400px;
+    width: 380px;
     height: auto;
     display: block;
     opacity: 0;
